# WellWellDjango

./: .env_example  Product_fixture.json  README.md  catalog_fixture.json  category_fixture.json  pyproject.toml  test_product_fixture.json
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_update_at_post_updated_at.py  0003_alter_post_options_and_more.py
blog/templates/blog/post/: post_delete_confirm.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  mixins.py  models.py  service.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status.py  0003_alter_product_options.py
catalog/templates/auth/client/: login.html  register.html
catalog/templates/catalog/: base.html  contacts.html  header.html  home.html  product_detail.html
catalog/templates/catalog/category/: category_create.html  category_list.html
catalog/templates/catalog/includes/: category_select.html  header.html
catalog/templates/catalog/product/: product_delete_confirm.html  product_detail.html  product_form.html  product_list.html
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: Product_fixture.json  catalog_fixture.json  category_fixture.json  group_fixtures.json  posts_fixture.json  test_product_fixture.json
static/js/: script.js
users/: admin.py  models.py
users/migrations/: 0001_initial.py
